--- a/src/Resources/Localization/Plugin/fr.json
+++ b/src/Resources/Localization/Plugin/fr.json
@@ -1,20 +1,4 @@
 {
-  "Commands.List.Help": {
-    "message": "Activer/Désactiver la liste de missions",
-    "description": "KikoPlugin..ctor"
-  },
-  "Commands.Settings.Help": {
-    "message": "Activer/Désactiver le menu de paramètres",
-    "description": "KikoPlugin..ctor"
-  },
-  "Commands.Editor.Help": {
-    "message": "Activer/Désactiver l'éditeur de missions",
-    "description": "KikoPlugin..ctor"
-  },
-  "Commands.Info.Help": {
-    "message": "Activer/Désactiver la fenêtre d'information si une mission est chargée",
-    "description": "KikoPlugin..ctor"
-  },
   "UI.Screens.Settings.Title": {
     "message": "{0} - Paramètres",
     "description": "SettingsScreen.DrawSettingsWindow"
@@ -83,41 +67,29 @@
     "message": "{0} - Outil de Mission",
     "description": "ListScreen.DrawListWindow"
   },
-  "UI.Screens.DutyList.NoDutyFiles": {
+  "UI.Screens.DutyList.NoFiles": {
     "message": "Aucun fichier de mission n'a été détecté ! Veuillez ouvrir les Paramètres -> Mettre à jour les Ressources.",
     "description": "ListScreen.DrawListWindow"
   },
-  "UI.Screens.DutyList.SupportButton": {
+  "Generics.Support": {
     "message": "Support (GitHub)",
     "description": "ListScreen.DrawListWindow"
   },
-  "UI.Screens.DutyList.Search": {
+  "Generics.Search": {
     "message": "Rechercher",
     "description": "ListScreen.DrawListWindow"
   },
-  "UI.Screens.DutyList.NoDutysForType": {
-    "message": "Aucune mission de ce type n'a été détectée.",
-    "description": "ListScreen.DrawListWindow"
+  "UI.Screens.Editor.FileTooLong": {
+    "message": "Your file was too big to be loaded into the editor.",
+    "description": "EditorPresenter.OnFileSelect"
   },
-  "UI.Screens.DutyList.Level": {
-    "message": "Niveau",
-    "description": "ListScreen.DrawListWindow"
+  "UI.Screens.Editor.FileLoaded": {
+    "message": "Your file was successfully loaded.",
+    "description": "EditorPresenter.OnFileSelect"
   },
-  "UI.Screens.DutyList.Duty": {
-    "message": "Mission",
-    "description": "ListScreen.DrawListWindow"
-  },
-  "UI.Screens.DutyList.NoBossData": {
-    "message": "Aucun guide n'est disponible pour {0}.",
-    "description": "ListScreen.DrawListWindow"
-  },
-  "UI.Screens.DutyList.UpdateRequired": {
-    "message": "Impossible d'afficher cette mission car elle n'est pas supportée par cette version.",
-    "description": "ListScreen.DrawListWindow"
-  },
-  "UI.Screens.DutyList.InDuty": {
-    "message": "En Mission",
-    "description": "ListScreen.DrawListWindow"
+  "UI.Screens.Editor.FileSaved": {
+    "message": "Your file was successfully saved.",
+    "description": "EditorPresenter.OnFileSave"
   },
   "UI.Screens.Editor.Title": {
     "message": "{0} - Éditeur de Mission",
@@ -151,40 +123,28 @@
     "message": "Opens the contribution guidelines.",
     "description": "EditorScreen.DrawEditorButtons"
   },
-  "UI.Screens.Editor.DetectedIssues": {
-    "message": "Detected Issues:",
+  "UI.Screens.Editor.Problems": {
+    "message": "Problems:",
     "description": "EditorScreen.DrawEditorInput"
   },
   "UI.Screens.Editor.Unsupported": {
-    "message": "Duty contains invalid enum values or is unsupported by this plugin version.",
+    "message": "Duty contains invalid IDs and/or is unsupported by this plugin version.",
     "description": "EditorScreen.DrawEditorInput"
   },
-  "UI.Screens.Editor.NoIssues": {
-    "message": "No issues detected.",
+  "UI.Screens.Editor.Problems.None": {
+    "message": "No problems have been detected for this file.",
     "description": "EditorScreen.DrawEditorInput"
   },
   "UI.Screens.Editor.Preview": {
     "message": "Preview",
     "description": "EditorScreen.DrawEditorPreview"
   },
-  "UI.Screens.SettingDutyInfo.MechanicName": {
-    "message": "Mécanique",
-    "description": "EditorScreen.DrawEditorPreview"
-  },
-  "UI.Screens.SettingDutyInfo.MechanicDescription": {
-    "message": "Description",
-    "description": "EditorScreen.DrawEditorPreview"
-  },
-  "UI.Screens.SettingDutyInfo.MechanicType": {
-    "message": "Type",
-    "description": "EditorScreen.DrawEditorPreview"
-  },
-  "UI.Screens.Editor.StartEditing": {
-    "message": "Start editing to see something here.",
-    "description": "EditorScreen.DrawEditorPreview"
-  },
   "UI.Screens.Editor.Metadata": {
     "message": "Metadata",
+    "description": "EditorScreen.DrawEditorPreview"
+  },
+  "UI.Screens.Editor.NothingToPreview": {
+    "message": "Nothing to preview, start editing or resolve issues to see something here.",
     "description": "EditorScreen.DrawEditorPreview"
   },
   "UI.Screens.Editor.IDs": {
@@ -196,24 +156,64 @@
     "description": "DutyInfoScreen.DrawInfoWindow"
   },
   "UI.Screens.SettingDutyInfo.NoDuty": {
-    "message": "No duty selected.",
+    "message": "No duty selected, use /kikolist to see all available duties.",
     "description": "DutyInfoScreen.DrawInfoWindow"
   },
-  "UI.Screens.SettingDutyInfo.DutyText": {
+  "UI.Components.DutiesList.NoDutiesfound": {
+    "message": "No duties were found.",
+    "description": "DutyListComponent.Draw"
+  },
+  "Generics.Level": {
+    "message": "Niveau",
+    "description": "DutyListComponent.Draw"
+  },
+  "Generics.Duty": {
+    "message": "Mission",
+    "description": "DutyListComponent.Draw"
+  },
+  "Generics.InDuty": {
+    "message": "En Mission",
+    "description": "DutyListComponent.Draw"
+  },
+  "UI.Components.DutiesList.UpdateRequired": {
+    "message": "Impossible d'afficher cette mission car elle n'est pas supportée par cette version.",
+    "description": "DutyListComponent._unsupportedDuty"
+  },
+  "UI.Components.DutiesList.NoBossData": {
+    "message": "Aucun guide n'est disponible pour {0}.",
+    "description": "DutyListComponent._noDataDuty"
+  },
+  "Generics.Mechanic": {
+    "message": "Mécanique",
+    "description": "DutyBossListComponent.Draw"
+  },
+  "Generics.Description": {
+    "message": "Description",
+    "description": "DutyBossListComponent.Draw"
+  },
+  "Generics.BossList.Type": {
+    "message": "Type",
+    "description": "DutyBossListComponent.Draw"
+  },
+  "UI.Components.DutyHeading.Title": {
     "message": "Mission : {0}",
-    "description": "DutyInfoScreen.DrawInfoWindow"
+    "description": "DutyHeadingComponent.Draw"
   },
-  "UI.Screens.SettingDutyInfo.Error": {
-    "message": "Une erreur s'est produite pendant l'affichage des informations de la mission.",
-    "description": "DutyInfoScreen.DrawInfoWindow"
+  "Commands.List.Help": {
+    "message": "Activer/Désactiver la liste de missions",
+    "description": "CommandManager.Initialize"
   },
-  "UI.Tags.New": {
-    "message": "NOUV.",
-    "description": "Badges.New"
+  "Commands.Settings.Help": {
+    "message": "Activer/Désactiver le menu de paramètres",
+    "description": "CommandManager.Initialize"
   },
-  "Components.Tags.New.Tooltip": {
-    "message": "Nouvel ajout !",
-    "description": "Badges.New"
+  "Commands.Editor.Help": {
+    "message": "Activer/Désactiver l'éditeur de missions",
+    "description": "CommandManager.Initialize"
+  },
+  "Commands.Info.Help": {
+    "message": "Activer/Désactiver la fenêtre d'information si une mission est chargée",
+    "description": "CommandManager.Initialize"
   },
   "Duty.Name.None": {
     "message": "Mission sans nom",
