--- a/src/Resources/Localization/Duty/en/A Realm Reborn/Dungeons/TheTamTaraDeepcroft_Hard.json
+++ b/src/Resources/Localization/Duty/en/A Realm Reborn/Dungeons/TheTamTaraDeepcroft_Hard.json
@@ -1,6 +1,6 @@
 {
     "Version": 0,
-    "Name": "Tam-Tara Deepcroft",
+    "Name": "The Tam-Tara Deepcroft",
     "Difficulty": 1,
     "Type": 0,
     "Expansion": 0,
